#208 JDK 17 support
gson tests workaround